--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,63 @@
 body{
-margin: 0px;
+	margin: 0px;
 }
 #menu{
-width: 100%;
-height: 75px;
-background-color: rgb(56, 56, 56);
+	width: 100%;
+	height: 75px;
+	background-color: rgb(56, 56, 56);
+}
+#image{
+	background-image: url('../images/image.png');
+    border: rgba(34,34,34,0.9) 1px solid;
+    width: 100%;
+    position: fixed;
+    top: 75px;
+	bottom: 0px;
+	background-size: cover;
+}
+#menulogo{
+font-family: 'Lobster', cursive;
+font-size: 45px;
+color: rgb(164, 68, 255);
+padding-top: 7px;
+margin-left: 10%;
+}
+#menucontainer{
+float: right;
+list-style-type: none;
+font-size: 30px;
+padding-top: 12px;
+padding-right: 90px;
+}
+ul{
+	margin: 0;
+}
+li {
+    display: inline;
+}
+li a{
+text-decoration: none;
+color:white;
+font-family: 'Raleway', Helvetica, Arial, sans-serif;
+padding-right: 5px;
+padding-left: 5px;
+}
+li a:hover{
+color:rgb(197, 77, 247);
+}
+#middletext{
+text-align: center;
+padding-top: 20%;
+font-family: 'Molengo', Georgia, Times, serif;
+color: white;
+font-size: 30px;
+}
+#middletext a{
+font-family: 'Raleway', Helvetica, Arial, sans-serif;
+border: solid 1px;
+padding-left: 5px;
+padding-right: 5px;
+border-radius: 5px;
+text-decoration:none;
+color: white;
 }
